corrected the link

--- a/simon-service/public/about.html
+++ b/simon-service/public/about.html
@@ -59,7 +59,7 @@
       <hr />
       <span class="text-reset">Solon</span>
       <br />
-      <a href="https://github.com/Solon-B/cs260-BYU">GitHub</a>
+      <a href="https://github.com/Solon-B/css/tree/main">GitHub</a>
     </footer>
   </body>
 </html>
