--- a/simon-service/public/index.html
+++ b/simon-service/public/index.html
@@ -51,7 +51,7 @@
     <footer class="bg-dark text-white-50">
       <div class="container-fluid">
         <span class="text-reset">Author Solon</span>
-        <a class="text-reset" href="https://github.com/Solon-B/cs260-BYU">Source</a>
+        <a class="text-reset" href="https://github.com/Solon-B/css/tree/main">Source</a>
       </div>
     </footer>
   </body>
